src/pages/PodcastsPage/PodcastListItem/styles/PodcastListItem.module.css
.container {
  background-color: var(--col-grey-4);
  padding: 1rem;
  display: flex;
  flex-wrap: wrap;
  margin-top: 1rem;
}

.playIconContainer {
  flex-basis: 40px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-left: 2rem;
}

.duration {
  margin-top: 0.8rem;
  font-size: 1.6rem;
  color: var(--col-grey-11);
  text-align: center;
}

.headerContainer {
  display: flex;
  align-items: stretch;
  margin-top: 1rem;
  justify-content: space-between;
}

.titleContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.timeAgo {
  margin-top: 0.5rem;
  font-size: 1.4rem;
  color: var(--col-grey-11);
}

.description {
  margin-top: 2rem;
}

@media screen and (min-width: 500px) {
  .container {
    flex-wrap: nowrap;
  }

  .textContainer {
    margin-left: 1rem;
  }

  .playIconContainer {
    order: 2;
  }

  .headerContainer {
    margin-top: 0;
  }

  .imageContainer {
    flex: 0 0 185px;
  }
}

